# eduequity-os

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  LICENSE  README.md  TEST_REPORT.md  TODO.md  TODO_CI_FIX.md  TODO_DEMO.md  TODO_FIX.md  TODO_IMPLEMENTATION.md  docker-compose.yml  package-lock.json  package.json  pnpm-workspace.yaml  pyproject.toml  verify_setup.sh
.github/workflows/: ci.yml
apps/api/: .env.example  requirements.txt
apps/api/alembic/: env.py
apps/api/app/: main.py
apps/api/app/api/v1/: auth_routes.py  router.py
apps/api/app/core/: config.py  dependencies.py  logging.py  middleware.py  security.py
apps/api/app/db/: session.py
apps/api/app/db/models/: base.py  user.py
apps/api/app/schemas/: auth.py  user.py
apps/api/apps/api/app/: __init__.py
apps/api/apps/api/app/core/: __init__.py  logging.py
apps/api/eduequity_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/api/scripts/: seed_demo_data.py  test_auth.py  verify_setup.py
apps/api/tests/: conftest.py  test_app.py
apps/web/: .env.example  components.json  middleware.ts  next.config.js  package-lock.json  package.json  tsconfig.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/(auth)/login/: page.tsx
apps/web/src/app/(auth)/register/: page.tsx
apps/web/src/app/dashboard/principal/: page.tsx  principal-dashboard-client.tsx
apps/web/src/app/dashboard/student/: page.tsx  student-dashboard-client.tsx
apps/web/src/app/dashboard/teacher/: page.tsx  teacher-dashboard-client.tsx
apps/web/src/app/test-api/: page.tsx
apps/web/src/components/charts/: dashboard-charts.tsx
apps/web/src/components/layout/: dashboard-layout.tsx  sidebar.tsx
apps/web/src/components/ui/: dashboard-skeleton.tsx  dropdown-menu.tsx  empty-state.tsx  form.tsx  select.tsx  sonner.tsx  stats-card.tsx
apps/web/src/lib/: api-client.ts  auth.ts  utils.ts
apps/web/src/types/: index.ts
docs/: CLOUDFLARE_TUNNEL_GUIDE.md  QUOTA_SOLUTIONS.md  VSCODE_TUNNELS_FIX.md  architecture.md
infra/: docker-compose.prod.yml  docker-compose.yml
infra/nginx/: nginx.conf
scripts/: dev.sh  setup-radix-symlinks.sh  setup.sh  start-tunnel.sh  test.sh  tunnel-manager.sh  verify_setup.sh
(+1 files in other folders)
